@@ -1,3 +1,7 @@
+2006-05-19  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* tests/sysctl1.c: Use CYG_NELEM from infra. 
+
 2006-05-08  Andy Jackson <andy@grapevinetech.co.uk>
 
 	* src/ecos/support.c (cyg_net_show_mbufs): Use %p in diag_printf
